--- a/notes-app-api/package.json
+++ b/notes-app-api/package.json
@@ -13,12 +13,9 @@
     "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
   },
   "devDependencies": {
-    "aws-sdk": "^2.580.0",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
   },
-  "dependencies": {
-    "uuid": "^3.3.3"
-  }
+  "dependencies": {}
 }
